# tardy

./: .gitignore  .style.yapf  ReadMe.md  pylock.toml  pyproject.toml
.github/workflows/: publish.yaml
src/: tardy.py
tardy/: cli.py
tardyclock/: __init__.py  core.py
util/: file_name_does_not_matter.py
