[project]
name = "tardy"
version = "1.0.0"
description = "A simple Python package that tells you the time."
readme = "ReadMe.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Rishyak", email = "hello@rishyak.com" }]
keywords = ["time", "datetime", "clock"]
dependencies = ["pytz>=2025.2", "typer>=0.15.4"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "util/file_name_does_not_matter.py"

[project.scripts]
tardy = "tardy.cli:tardy"

[project.optional-dependencies]
dev = ["hatchling>=1.27.0", "ruff>=0.11.12", "yapf>=0.43.0"]
